# warren

./: .env.dist  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  renovate.json  versions.json
.circleci/: config.yml
0.2/: 404.html  (+2 more)
docs/: Dockerfile  cli.md  contribute.md  index.md  notebook.md  plugins.md  pyproject.toml  tdbp.md
src/api/core/: LICENSE.md  README.md  alembic.ini  logging-config.dev.yaml  logging-config.prod.yaml  logging-config.yaml  pyproject.toml
src/api/core/warren/: __init__.py  __main__.py  alembic.ini  backends.py  base_indicator.py  cli.py  commands.py  conf.py  database_manager.py  db.py  exceptions.py  fields.py  filters.py  models.py  utils.py  xapi.py
src/api/core/warren/api/: __init__.py  health.py
src/api/core/warren/api/v1/: __init__.py
src/api/core/warren/factories/: __init__.py  base.py
src/api/core/warren/indicators/: __init__.py  base.py  mixins.py  models.py
src/api/core/warren/migrations/: __init__.py  env.py
src/api/core/warren/migrations/versions/: 05e3da68582b_update_cache_index.py  2aaa9e8fc591_update_cache_schema.py  58a5b4238bbc_rename_cache_table.py  77a0f0fbb8ab_fix_duration_constraint.py  86ec32885672_introduce_experience_index.py  86ec32885672_rename_format_experience.py  94d0308156c1_fix_xi_time_constraint.py  a113f2ab4dc9_introduce_experience_index.py  ecc3caa6bbbd_init.py  ecc3caa6bbbd_introduce_cacheentry.py
src/api/core/warren/tests/: conftest.py  test_base_indicator.py  test_cli.py  test_commands.py  test_db.py  test_fields.py  test_filters.py  test_indicators_base.py  test_indicators_mixins.py  test_indicators_models.py  test_models.py  test_utils.py  test_xapi.py
src/api/core/warren/tests/api/: __init__.py  test_health.py
src/api/core/warren/tests/fixtures/: __init__.py  app.py  auth.py  db.py
src/api/core/warren/tests/indicators/: __init__.py  test_base.py  test_mixins.py  test_models.py
src/api/core/warren/tests/xi/: __init__.py
src/api/core/warren/tests/xi/client/: __init__.py  test_base_crud.py  test_client.py  test_crud_experience.py  test_crud_relation.py
src/api/core/warren/tests/xi/indexers/: __init__.py  test_factories.py  test_mixins.py
src/api/core/warren/tests/xi/routers/: __init__.py  test_experiences.py  test_relations.py
src/api/core/warren/tests/xi/schema/: __init__.py  test_experience.py  test_relation.py
src/api/core/warren/xi/: __init__.py  client.py  enums.py  exceptions.py  factories.py  filters.py  models.py  schema.py
src/api/core/warren/xi/indexers/: __init__.py  clients.py  etl.py  exceptions.py  factories.py  mixins.py  runner.py
src/api/core/warren/xi/routers/: __init__.py  experiences.py  relations.py
src/api/plugins/activity/: __init__.py  pyproject.toml
src/api/plugins/activity/warren_activity/: __init__.py  api.py  indicators.py
src/api/plugins/document/: __init__.py  pyproject.toml
src/api/plugins/document/tests/: __init__.py  conftest.py  test_api.py
src/api/plugins/document/warren_document/: __init__.py  api.py  conf.py  factories.py  indicators.py
src/api/plugins/moodle/: __init__.py  pyproject.toml
src/api/plugins/moodle/tests/: __init__.py  conftest.py  test_api.py  test_indicators.py
src/api/plugins/moodle/warren_moodle/: __init__.py  api.py  conf.py  factories.py  indicators.py  models.py
src/api/plugins/video/: __init__.py  pyproject.toml
src/api/plugins/video/tests/: __init__.py  conftest.py  test_api.py  test_indicators.py
src/api/plugins/video/warren_video/: api.py  conf.py  factories.py  indicators.py  models.py
src/app/: Dockerfile  manage.py  pyproject.toml  version.json
src/app/apps/: __init__.py
src/app/apps/dashboards/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/app/apps/dashboards/templates/dashboards/: base.html
src/app/apps/development/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/app/apps/development/templates/development/: lti_development.html  lti_request.html  lti_select.html
src/app/apps/lti/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  token.py  urls.py  views.py
src/app/apps/lti/templates/: autosubmit_form.html  base.html  config.xml
src/app/apps/lti/tests/: __init__.py  test_lti_config.py  test_lti_request.py  test_lti_respond.py  test_lti_select.py  test_token.py
src/app/apps/token/v1/: urls.py
src/app/warren/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/backend/: .pylintrc  Dockerfile  pyproject.toml
src/backend/core/: README.md  pyproject.toml
src/backend/core/warren/: backends.py  base_indicator.py  conf.py  fields.py  models.py
src/backend/core/warren/api/: __init__.py
src/backend/core/warren/api/v1/: __init__.py
src/backend/core/warren/factories/: base.py  video.py
src/backend/core/warren/tests/: __init__.py  conftest.py  test_filters.py
src/backend/core/warren/tests/fixtures/: asynchronous.py  backends.py
src/backend/plugins/video/: pyproject.toml
src/backend/plugins/video/tests/: __init__.py  conftest.py  factories.py  fixtures.py  test_api.py  test_complete_viewers.py  test_complete_views.py  test_viewers.py  test_views.py
src/backend/plugins/video/warren_video/: __init__.py  api.py  backend.py  base.py  factories.py  indicators.py  lrs.py  models.py  statement_filters.py  viewers.py  views.py
src/backend/plugins/video/warren_video/indicator/: indicator.py
src/backend/plugins/video/warren_video/indicators/: __init__.py  daily_video_views.py  models.py  unique_views_count.py
src/backend/plugins/video/warren_video/metric/: __init__.py  count.py  daytimeseries.py  histogram.py  metric.py
src/backend/plugins/video/warren_video/tests/: __init__.py  conftest.py  factories.py  fixtures.py  test_api.py
src/backend/tests/: conftest.py  test_api.py
src/backend/tests/api/v1/: test_video.py
src/backend/tests/fixtures/: backends.py  time.py
src/backend/warren/: __init__.py  backends.py  conf.py
src/backend/warren/api/: __init__.py
src/backend/warren/api/v1/: __init__.py
src/backend/warren/api/v1/video/: __init__.py
(+164 files in other folders)
