#
# Warren app
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warren"
description = "The visualization platform for your learning analytics"
readme = "README.md"
authors = [
  { name="Open FUN (France Universite Numerique)", email="fun.dev@fun-mooc.fr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
keywords = ["Analytics", "xAPI", "LRS", "LTI"]
dependencies = [
    "Django==4.2.7",
    "django-configurations==2.5",
    "django-cors-headers==4.3.0",
    "django-lti-toolbox==1.2.0",
    "djangorestframework_simplejwt==5.3.0",
    "dockerflow==2022.8.0",
    "gunicorn==21.2.0",
    "oauthlib==3.2.2",
    "psycopg2-binary==2.9.9",
    "sentry-sdk==1.34.0",
    "urllib3==2.0.7",
    "whitenoise==6.6.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/openfun/warren"
"Bug Tracker" = "https://github.com/openfun/warren/issues"

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "build==1.0.3",
    "factory-boy==3.3.0",
    "Faker==20.0.0",
    "ipdb==0.13.13",
    "ipython==8.10.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-django==4.7.0",
    "ruff==0.1.5",
    "xmltodict==0.13.0",
]
ci = [
    "twine==4.0.2",
]

[tool.setuptools]
packages = ["warren", "apps"]

[tool.setuptools.dynamic]
version = { attr = "warren.__version__" }

# Third party packages configuration
[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=apps"
python_files = [
    "test_*.py",
    "tests.py",
]

[tool.ruff]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]
exclude = ["apps/*/migrations/*"]

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.per-file-ignores]
"*/tests/*" = [
    "S101",
    "PLR2004",  # Pylint magic-value-comparison
]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"
