#
# Warren app
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warren"
description = "The visualization platform for your learning analytics"
readme = "README.md"
authors = [
  { name="Open FUN (France Universite Numerique)", email="fun.dev@fun-mooc.fr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
keywords = ["Analytics", "xAPI", "LRS", "LTI"]
dependencies = [
    "Django==4.2.7",
    "django-configurations==2.5.1",
    "django-cors-headers==4.6.0",
    "django-lti-toolbox==2.0.0",
    "djangorestframework_simplejwt==5.3.1",
    "dockerflow==2024.4.2",
    "gunicorn==23.0.0",
    "oauthlib==3.2.2",
    "psycopg2-binary==2.9.10",
    "sentry-sdk==2.19.2",
    "urllib3==2.2.3",
    "whitenoise==6.8.2",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/openfun/warren"
"Bug Tracker" = "https://github.com/openfun/warren/issues"

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "build==1.2.2.post1",
    "factory-boy==3.3.1",
    "Faker==33.1.0",
    "ipdb==0.13.13",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "ruff==0.8.4",
    "xmltodict==0.14.2",
]
ci = [
    "twine==6.0.1",
]

[tool.setuptools]
packages = ["warren", "apps"]

[tool.setuptools.dynamic]
version = { attr = "warren.__version__" }

# Third party packages configuration
[tool.coverage.run]
omit = [
    "*/tests/*",
    "tests.py",
]

[tool.pytest.ini_options]
addopts = "-v --cov-config=pyproject.toml --cov-report term-missing --cov=apps"
python_files = [
    "test_*.py",
    "tests.py",
]

[tool.ruff]
exclude = ["apps/*/migrations/*"]
# Assume Python 3.9.
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = [
    "S101",
    "PLR2004",  # Pylint magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"
