#
# Warren package
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warren-api"
description = "The visualization platform for your learning analytics (API backend)"
readme = "README.md"
authors = [
  { name="Open FUN (France Universite Numerique)", email="fun.dev@fun-mooc.fr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
keywords = ["Analytics", "xAPI", "LRS", "LTI"]
dependencies = [
    "alembic==1.12.0",
    "arrow==1.3.0",
    "django-lti-toolbox==1.2.0",
    "elasticsearch[async]==8.10.0",
    "fastapi==0.103.2",
    "importlib-metadata==6.8.0",
    "pandas==2.0.3",
    "psycopg2-binary==2.9.8",
    "pydantic[dotenv]==1.10.8",
    "python-jose[cryptography]==3.3.0",
    "rfc3987==1.3.8",
    "sentry-sdk[fastapi]==1.31.0",
    "sqlmodel==0.0.8",
    "uvicorn[standard]==0.23.2",
    "ralph-malph[backend-lrs]==3.9.0"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/openfun/warren"
"Bug Tracker" = "https://github.com/openfun/warren/issues"

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "build==1.0.3",
    "factory-boy==3.3.0",
    "Faker==19.6.2",
    "freezegun==1.2.2",
    "httpx==0.24.1",
    "ipdb==0.13.13",
    "ipython==8.10.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-httpx==0.22.0",
    "ruff==0.0.291",
]
ci = [
    "twine==4.0.2",
]

[tool.setuptools.dynamic]
version = { attr = "warren.__version__" }


# Third party packages configuration
[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=core --cov=plugins"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
exclude = [
    "core/warren/migrations/versions",
]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.per-file-ignores]
"*/tests/*" = [
    "S101",
    "PLR2004",  # Pylint magic-value-comparison
]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"
